--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/common": "~12.2.16",
     "@angular/compiler": "~12.2.16",
     "@angular/core": "~12.2.16",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~12.2.16",
     "@angular/material": "^8.2.2",
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "~12.2.16",
+    "firebase": "^9.8.3",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
