--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "~13.3.11",
     "firebase": "^9.8.3",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.6.7",
+    "rxjs": "~7.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -37,6 +37,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "firebase-tools": "^11.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.20",
