--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.11",
-    "@angular/cdk": "~8.2.2",
+    "@angular/cdk": "~13.3.9",
     "@angular/common": "~13.3.11",
     "@angular/compiler": "~13.3.11",
     "@angular/core": "~13.3.11",
-    "@angular/fire": "^7.4.1",
+    "@angular/fire": "^7.2",
     "@angular/forms": "~13.3.11",
-    "@angular/material": "^8.2.2",
+    "@angular/localize": "~13.3.11",
+    "@angular/material": "~13.3.9",
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.8.3",
     "hammerjs": "^2.0.8",
     "rxjs": "~7.5.5",
@@ -38,12 +42,12 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "firebase-tools": "^11.0.1",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.20",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
